openshift/backend-services.yaml
# Activity Service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activity-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: activity-service
  template:
    metadata:
      labels:
        app: activity-service
    spec:
      containers:
      - name: activity-service
        image: image-registry.openshift-image-registry.svc:5000/ecovista/activity-service:latest
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: activity-service
spec:
  selector:
    app: activity-service
  ports:
  - port: 5002
    targetPort: 5001
# Destination Service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: destination-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: destination-service
  template:
    metadata:
      labels:
        app: destination-service
    spec:
      containers:
      - name: destination-service
        image: image-registry.openshift-image-registry.svc:5000/ecovista/destination-service:latest
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: destination-service
spec:
  selector:
    app: destination-service
  ports:
  - port: 5003
    targetPort: 5001
# Review Service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review-service
  template:
    metadata:
      labels:
        app: review-service
    spec:
      containers:
      - name: review-service
        image: image-registry.openshift-image-registry.svc:5000/ecovista/review-service:latest
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: review-service
spec:
  selector:
    app: review-service
  ports:
  - port: 5004
    targetPort: 5001
# TravelGroup Service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travelgroup-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: travelgroup-service
  template:
    metadata:
      labels:
        app: travelgroup-service
    spec:
      containers:
      - name: travelgroup-service
        image: image-registry.openshift-image-registry.svc:5000/ecovista/travelgroup-service:latest
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: travelgroup-service
spec:
  selector:
    app: travelgroup-service
  ports:
  - port: 5005
    targetPort: 5001
# User Service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: image-registry.openshift-image-registry.svc:5000/ecovista/user-service:latest
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
  - port: 5006
    targetPort: 5001
